source/stylesheets/layout.sass
@import 'variables'

*
  box-sizing: border-box
  
html
  -webkit-tap-highlight-color: rgba(0,0,0,0)
  min-height: 100%
  position: relative
  
  &.overlay-open
    overflow: hidden
    margin-right: 15px
  
body
  background-color: $background-color
  color: $text-color
  font-family: $primary-font
  font-size: 14px
  line-height: 1
  text-transform: uppercase
  
  &.maintenance-page
    background: $accent-background-color
    color: $accent-text-color
    
  &.checkout-page
    +flexbox
    +align-items(center)
    +justify-content(center)
    padding: 100px
    
.maintenance-content
  height: 100vh
  display: flex
  flex-direction: column
  align-items: flex-start
  
.maintenance-headings
  margin-top: auto
  width: 100%

h1.maintenance-header
  color: $accent-text-color
  font-size: 40px
  letter-spacing: 10px
  line-height: 50px
  margin-bottom: 30px
  max-width: 550px
  width: 100%
  
.maintenance-note
  font-size: 15px
  margin-bottom: 100px
  text-transform: none
  
  @media screen and (max-width: $break-extra-small)
    margin-bottom: 50px
  
.maintenance-icon
  fill: $accent-text-color
  height: 50px
  margin: 100px 0 50px 0
  width: 50px

.maintenance-footer
  background: $background-color
  color: $text-color
  font-size: 11px
  letter-spacing: 2px
  line-height: 25px
  padding: 50px 0
  width: 100%
      
a, a:visited
  color: $text-color
  text-decoration: none

h1, h2, h3, h4, h5, h6
  color: $text-color
  font-weight: normal
  margin: 0
  padding: 0
  text-align: left

h1
  font-size: 25px
  letter-spacing: 3px

button, a.button
  border: 0px
  background: $accent-background-color
  color: $accent-text-color
  cursor: pointer
  display: block
  font-family: $primary-font
  font-size: 11px
  height: 75px
  letter-spacing: 2px
  line-height: 75px
  outline: none
  padding: 0
  text-align: center
  text-transform: uppercase
  width: 100%
  
  &:focus, &:hover
    .underline
      border-bottom: 1px solid $accent-text-color
  
.select
  +flexbox
  +align-items(center)
  +justify-content(flex-start)
  background: $accent-background-color
  color: $accent-text-color
  cursor: pointer
  font-family: $primary-font
  height: 75px
  max-width: 100%
  padding: 0
  position: relative
  width: 100%

  select
    +appearance(none)
    background: none
    border: 0
    color: $accent-text-color
    cursor: pointer
    font-family: $primary-font
    font-size: 11px
    height: 100%
    letter-spacing: 1px
    line-height: 2em
    padding: 0 66px 0 30px
    position: relative
    text-transform: uppercase
    width: 100%
    z-index: 2

    option
      background-color: #FFF
      color: #000

    &:focus
      box-shadow: none
      outline: none

    &::-ms-expand
      display: none
    
  svg
    display: block
    fill: #FFFFFF
    height: 29px
    margin: 0 auto
    width: 29px
    z-index: 1

  &:hover
    color: $accent-text-color
    border-color: $accent-text-color

    select
      color: $accent-text-color
      
    svg
      fill: $accent-text-color
      
  .arrow-holder, .nav-icon
    +flexbox
    +justify-content(center)
    +align-items(center)
    height: 75px
    margin-left: auto
    text-align: center
    width: 30px

input, textarea
  +appearance(none)
  border-radius: 0
  background: $background-color
  border: 2px solid $text-color
  font-family: $primary-font
  font-size: 15px
  letter-spacing: 2px
  outline: none
  padding: 10px
  text-transform: uppercase
  
  &:active, &:focus
    outline: none

.header
  letter-spacing: 2px
  
  @media screen and (max-width: $break-small)
    padding-bottom: 25px
  
  .wrapper
    +flexbox
    +align-items(center)
    +justify-content(flex-start)

  .open-overlay
    border-bottom: 1px solid transparent
    font-size: 11px
    margin-left: auto
    padding-bottom: 1px
    
    &:hover
      border-bottom: 1px solid $text-color
    
.store-link
  font-size: 20px
  font-weight: bold
  padding: 100px 0
  
  @media screen and (max-width: $break-small)
    padding: 50px 50px 50px 0
  
  img
    display: block
    max-height: 80px

.page-accent
  background: $accent-background-color
  height: 25px
  margin-bottom: 50px
  max-width: 500px
  width: 100%
  
  @media screen and (max-width: $break-extra-small)
    margin: 50px 0 25px

.content
  margin-bottom: 200px
  
  @media screen and (max-width: $break-medium)
    margin-bottom: 100px
  
.footer
  font-size: 11px
  letter-spacing: 2px
  line-height: 25px
  
  .footer-divider
    border-top: 25px solid $accent-background-color
    height: 25px
    margin-bottom: 50px
    width: 100%
    
  .footer-navigation
    +flexbox
    +align-items(flex-start)
    padding-bottom: 100px
    
    @media screen and (max-width: $break-extra-small)
      +flex-wrap(wrap)
    
.footer-navigation-item
  list-style: none
  margin: 0
  padding: 0
  
  @media screen and (max-width: $break-small)
    padding-bottom: 4px
  
.footer-links
  margin-right: 100px

.footer-credit
  margin-left: auto
  
  @media screen and (max-width: $break-small)
    margin: 50px auto 0
    text-align: left
    width: 100%

.wrapper
  margin: 0 auto
  max-width: 1300px
  padding: 0 50px
  width: 100%
  
  @media screen and (max-width: $break-extra-small)
    padding: 0 25px

.split-page
  +flexbox
  +justify-content(flex-start)
  +align-items(flex-start)
  +flex-direction(row)
  
  @media screen and (max-width: $break-medium)
    +flex-direction(column)
  
  .page-header
    max-width: 500px
    width: 100%
    
    h1
      margin-bottom: 40px
    
    @media screen and (max-width: $break-small)
      max-width: 100%
    
  .page-content
    font-size: 15px
    line-height: 30px
    max-width: 700px
    text-transform: none
    width: 100%
  
    @media screen and (max-width: $break-small)
      max-width: 100%
      
.custom-page-content

  img, iframe
    display: block
    max-width: 100%
    
  ol, ul
    margin: 1em 0 0 20px
    padding: 0
  
  ol
    list-style-type: decimal
    
  ul
    list-style-type: disc
      
  a
    text-decoration: underline

a.continue-shopping-button
  margin-top: 50px
  max-width: 300px
  text-decoration: none
  width: 100%
  
  @media screen and (max-width: $break-small)
    max-width: 100%

.errors
  color: $error-color
  font-size: 11px
  letter-spacing: 2px
  line-height: 18px
  list-style: none
  margin: 0 0 50px 0
  padding: 0
  
.footer-overlay
  +transition(all .3s)
  background: $accent-background-color
  bottom: -100px
  color: $accent-text-color !important
  font-size: 11px
  height: 100px
  left: 0
  letter-spacing: 2px
  line-height: 100px
  padding: 0
  position: fixed
  text-align: left
  top: auto
  width: 100%
  z-index: 6
  
  @media screen and (max-width: $break-extra-small)
    bottom: -75px
    height: 75px
    line-height: 75px
  
  .wrapper
    +flexbox
    +justify-content(flex-start)
    +align-items(center)
  
  &.visible
    bottom: 0
    
    @media screen and (max-width: $break-extra-small)
      bottom: 0
  
  .footer-icon
    fill: $accent-text-color
    height: 29px
    margin-left: auto
    width: 29px
    
  .hidden-items
    display: none
    
  &.open
    transition-property: transform
    transition-duration: 0.3s
    transition-delay: 0s
    transform: translate3d(0,calc(-100vh + 100px),0)
    
    @media screen and (max-width: $break-extra-small)
      transform: translate3d(0,calc(-100vh + 75px),0)
    
.mfp-bg
  opacity: .95

.mfp-counter
  display: none
  
.mfp-image-holder .mfp-close
  opacity: 1
  right: -60px
  top: 32px
  
  @media screen and (max-width: $break-medium)
    padding-right: 0
    right: -4px
    top: -40px
  
.mfp-close .close-overlay
  fill: #FFFFFF
  height: 25px
  pointer-events: none
  width: 25px
  
.mfp-container
  padding: 0 100px
  
  @media screen and (max-width: $break-medium)
    padding: 0 20px
    
.dropdown-navigation
  background-color: $accent-background-color
  color: $accent-text-color
  cursor: pointer
  font-size: 11px
  letter-spacing: 2px
  margin-left: 100px
  margin-bottom: 125px
  max-width: 500px
  position: relative
  width: 100%
  
  @media screen and (max-width: $break-extra-small)
    &.open
      position: fixed
      z-index: 10
      top: 0
      left: 0
      line-height: 50px
      margin: 0
      width: 100vw
      height: 100vw
      max-width: 100vw
      
      @media screen and (max-width: $break-small)
        .navigation-title
          font-size: 25px
          
        .navigation-header
          width: 100vw
      
      .shop-dropdown
        height: 100vh
        max-height: 100vh
        padding: 25px
        top: 50px
  
  .navigation-header
    +flexbox
    +align-items(center)
    +justify-content(flex-start)
    background: $accent-background-color
    height: 75px
    padding: 0 50px
    position: relative
    width: 100%
    z-index: 5
    
    @media screen and (max-width: $break-small)
      padding: 0 25px
      
  .navigation-title
    color: $accent-text-color
    font-size: 11px
    text-overflow: ellipsis
    white-space: nowrap
    overflow: hidden
    max-width: calc(100% - 55px)
    
  .nav-icon
    +transform(rotate(0deg))
    +transition(.5s ease-in-out)
    cursor: pointer
    height: 29px
    margin-left: auto
    position: relative
    width: 29px
    
    span
      +transform(rotate(0deg))
      +transition(.25s ease-in-out)
      background: $accent-text-color
      border-radius: 1px
      display: block
      height: 1px
      left: 0
      opacity: 1
      position: absolute
      width: 100%
      
      &:nth-child(1)
        top: 7px
      
      &:nth-child(2), &:nth-child(3)
        top: 14px
      
      &:nth-child(4)
        top: 21px

  &.open .nav-icon span:nth-child(1) 
    top: 14px
    width: 0%
    left: 50%
  
  &.open .nav-icon span:nth-child(2) 
    -webkit-transform: rotate(45deg)
    -moz-transform: rotate(45deg)
    -o-transform: rotate(45deg)
    transform: rotate(45deg)
  
  &.open .nav-icon span:nth-child(3) 
    -webkit-transform: rotate(-45deg)
    -moz-transform: rotate(-45deg)
    -o-transform: rotate(-45deg)
    transform: rotate(-45deg)
    
  &.open .nav-icon span:nth-child(4)
    top: 12px
    width: 0%
    left: 50%

  @media screen and (max-width: $break-extra-small)
    margin-left: 0
    padding: 0
  
  .shop-dropdown
    background: $accent-background-color
    display: none
    height: auto
    left: 0
    line-height: 40px
    max-height: 400px
    overflow-y: auto
    padding: 0 50px 35px
    padding-bottom: 35px
    position: absolute
    top: 100%
    width: 100%
    z-index: 3
    
    @media screen and (max-width: $break-extra-small)
      bottom: 0
      height: 100vh
      max-height: 100vh
      max-width: 100vh
      position: fixed
      right: 0
      top: 0
      width: 100vh
      z-index: 10
      
    @media screen and (max-width: $break-extra-small)
      padding: 0 25px 25px
  
    .dropdown-links
      list-style: none
      margin: 0
      padding: 0
      
      .dropdown-link
        display: block
        line-height: 30px
        padding: 12px 0
        
        a, span
          color: $accent-text-color
          padding-bottom: 1px
          
          &:hover
            border-bottom: 1px solid $accent-text-color
        
        &.current-dropdown-link a
          border-bottom: 1px solid $accent-text-color

